--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 deploy:
   provider: heroku
   api_key:
-    secure: "ccae1a30-d06d-4b9c-b6f9-e78b78904e85"
+    secure: ccae1a30-d06d-4b9c-b6f9-e78b78904e85
     app: secure-lake-82403
