--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("com.h2database:h2")
+    compile("org.postgresql:postgresql")
     compileOnly ("org.projectlombok:lombok:1.16.18")
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
