--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,3 +2,5 @@
 # Datasource
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
