--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,5 +2,6 @@
 # Datasource
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
