--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,6 +2,7 @@
 # Datasource
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
